--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-<link type = "text/css" rel = "stylesheet" href = "Assignment 1.css" />
+<link type = "text/css" rel = "stylesheet" href = "css/style.css" />
 </head>
 <h1 align = "center">Our Menu</h1>
 <div id = "first">
