--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -3,10 +3,10 @@
 <head>
 <link type = "text/css" rel = "stylesheet" href = "css/style.css" />
 </head>
-<h1 align = "center">Our Menu</h1>
+<h1>Our Menu</h1>
 <div id = "first">
 <h4 id = "chicken">Chicken</h4>
-<p>&quotThey are angry with me, because I know what I am." Said the little eagle. "How do you know that they are angry with you?" "Because, they despise me for wanting to soar, they only want me to peck at the dirt, looking for ants, with them. But I can't do that. I don't have chicken feet, I have eagle wings."&quot </p>
+<p>&quotThey are angry with me, because I know what I am.&quot Said the little eagle. "How do you know that they are angry with you?" "Because, they despise me for wanting to soar, they only want me to peck at the dirt, looking for ants, with them. But I can't do that. I don't have chicken feet, I have eagle wings." </p>
 </div>
 <div id = "second">
 <h4 id = "beef">Beef</h4>
@@ -14,7 +14,7 @@
 </div>
 <div id = "third">
 <h4 id = "sushi">Sushi</h4>
-<p>&quotI don't speak Japanese, I don't know anything about Japanese business or Japanese culture. Apart from sushi. But I can't exactly go up to him and say &quotSushi!&quot out of the blue. It would be like going up to a top American businessman and saying, &quotT-bone steak!&quot
+<p>&quotI don't speak Japanese, I don't know anything about Japanese business or Japanese culture. Apart from sushi. But I can't exactly go up to him and say 'Sushi!' out of the blue. It would be like going up to a top American businessman and saying, 'T-bone steak!'&quot
 </p>
 </div>
 </html>
